# pylopdf

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LANGUAGES.md  LICENSE  README.ja.md  README.md  ROADMAP.md  SECURITY.md  mkdocs.ja.yml  mkdocs.ko.yml  mkdocs.yml  mkdocs.zh-cn.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  docs.yml  fuzz.yml  release-fonts.yml  release.yml
bench/: free_threaded.py  run.py
bench/results/: latest.md
docs/: api.ja.md  api.md  ecosystem.ja.md  ecosystem.md  getting-started.ja.md  getting-started.md  index.ja.md  index.md  migration.ja.md  migration.md
docs/en/: api.md  benchmarks.md  concurrency.md  ecosystem.md  getting-started.md  index.md  languages.md  llms.txt  migration.md  security.md
docs/ja/: api.md  benchmarks.md  concurrency.md  ecosystem.md  getting-started.md  index.md  languages.md  migration.md  security.md
docs/ko/: api.md  benchmarks.md  concurrency.md  ecosystem.md  getting-started.md  index.md  languages.md  migration.md  security.md
docs/overrides/: main.html
docs/overrides/partials/: alternate.html  living-document.css  source.html
docs/zh-cn/: api.md  benchmarks.md  concurrency.md  ecosystem.md  getting-started.md  index.md  languages.md  migration.md  security.md
fonts/pylopdf-fonts-cjk/: README.md  pyproject.toml
fonts/pylopdf-fonts-cjk/src/pylopdf_fonts_cjk/: __init__.py
fuzz/: README.md  __init__.py  fuzz_api.py
rust/: Cargo.toml
rust/src/: document.rs  draw.rs  extract.rs  lib.rs  ocr.rs  pixmap.rs
src/pylopdf/: __init__.py  _markdown.py  pylopdf_core.pyi
tests/: conftest.py  test_acroform.py  test_annots.py  test_cjk.py  test_core.py  test_draw.py  test_embfiles.py  test_encrypted.py  test_free_threaded.py  test_images.py  test_interop.py  test_layout.py  test_links.py  test_markdown.py  test_ocr_layer.py  test_page.py  test_page_labels.py  test_page_ops.py  test_pixmap.py  test_pylopdf.py  test_real_world.py  test_repository_language.py  test_tables.py  test_toc.py
tests/assets/encrypted/: generate.py
tests/assets/real_world/: README.md
tools/: check_repository_language.py  smoke_artifact.py
