[project]
name = "pylopdf"
version = "0.9.0"
description = "PDF editing and rendering for Python, powered by Rust (lopdf + hayro). MIT, zero dependencies, lightweight wheels."
authors = [{ "name" = "Yusuke Hayashi", "email" = "yusuke8h@gmail.com" }]
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
dependencies = []
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Rust",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]

[project.optional-dependencies]
# 非埋め込み日本語 PDF のレンダリング用フォント（Noto Sans/Serif JP を自動検出）
cjk = ["pylopdf-fonts-cjk>=0.1.0"]

[build-system]
requires = ["maturin>=1.14,<2.0"]
build-backend = "maturin"

[tool.maturin]
manifest-path = "rust/Cargo.toml"
python-source = "src"
module-name = "pylopdf.pylopdf_core"
features = ["pyo3/extension-module"]

[dependency-groups]
dev = [
    "maturin>=1.14.1",
    "mypy>=1.14",
    "pre-commit>=4.6.1",
    "pytest>=8.3",
    "ruff>=0.9",
]
# エコシステム連携レシピ（README 記載）の統合テスト用。未インストールならテストは skip
interop = [
    "typst>=0.15",
    "pyhanko>=0.35",
]
# 再現可能ベンチマーク（bench/run.py）の比較対象。手動実行のみで CI には入れない
bench = [
    "pymupdf>=1.26",
    "pypdf>=5",
    "pdfplumber>=0.11",
]

[tool.uv]
# Rust ソース変更時に uv が拡張モジュールを再ビルドするためのキャッシュキー
cache-keys = [
    { file = "pyproject.toml" },
    { file = "rust/Cargo.toml" },
    { file = "rust/src/*.rs" },
]

[tool.uv.workspace]
members = ["fonts/pylopdf-fonts-cjk"]

[tool.uv.sources]
# ローカル開発では extra をワークスペース内のフォントパッケージへ解決する
pylopdf-fonts-cjk = { workspace = true }

[tool.pytest.ini_options]
testpaths = ["tests"]

[[tool.mypy.overrides]]
# pypdf はフィクスチャ生成スクリプト（手動実行）専用で dev 依存に含めない
module = "pypdf.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
# cjk extra 未インストール環境でも型チェックが通るようにする
module = "pylopdf_fonts_cjk"
ignore_missing_imports = true

[[tool.mypy.overrides]]
# interop グループ（連携テスト用）未インストール環境でも型チェックが通るようにする
module = ["typst", "pyhanko.*"]
ignore_missing_imports = true

[tool.ruff]
line-length = 120
src = ["src"]
target-version = "py310"
# python/ と lambda_test/ は本ライブラリの対象外（別作業の同居ファイル）
extend-exclude = ["python", "lambda_test"]

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "D100",
    "D104",
    # ruff format と競合するルール
    "COM812",
    "ISC001",
    "D203",
    "D213",
    # 日本語ドキュメント方針（CLAUDE.md）と衝突するルール
    "D400",   # 「。」を終端句読点と認識しない
    "D415",   # 同上
    "D403",   # 日本語文中の英単語先頭を大文字化してしまう
    "RUF001", # 全角記号を ambiguous unicode として誤検出する
    "RUF002",
    "RUF003",
]

[tool.ruff.lint.per-file-ignores]
# Page と Document は同一モジュール内の協調クラスで、内部状態への相互アクセスが設計上の前提
"src/pylopdf/__init__.py" = ["SLF001"]
# S106: テストフィクスチャの固定パスワードは秘密情報ではない
# FBT003: set_form_field はチェックボックス値として bool を受ける設計（pymupdf 同様）
"tests/**" = ["INP001", "S101", "D103", "PLR2004", "TC003", "S106", "FBT003"]
# 手動実行の生成スクリプト（進捗表示に print を使う）
"tests/assets/encrypted/generate.py" = ["T201"]
# importorskip の後に連携ライブラリを import する必要があるため先頭以外の import を許可
"tests/test_interop.py" = ["E402"]
# 手動実行のベンチマークスクリプト（進捗と結果を print で出す。比較対象の失敗は握って
# 続行し、レポート生成の逐次処理はステートメント数・ループ内 try を許容する）
"bench/**" = ["INP001", "T201", "BLE001", "PLR0915", "PERF203"]
