[project]
name = "pylopdf"
version = "0.9.0"
description = "PDF editing and rendering for Python, powered by Rust (lopdf + hayro). MIT, zero dependencies, lightweight wheels."
authors = [{ "name" = "Yusuke Hayashi", "email" = "yusuke8h@gmail.com" }]
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
dependencies = []
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: Free Threading :: 3 - Stable",
    "Programming Language :: Rust",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/yhay81/pylopdf"
Documentation = "https://yhay81.github.io/pylopdf/"
Changelog = "https://github.com/yhay81/pylopdf/blob/main/CHANGELOG.md"
Issues = "https://github.com/yhay81/pylopdf/issues"
Source = "https://github.com/yhay81/pylopdf"

[project.optional-dependencies]
# Fonts for PDFs that reference non-embedded CJK fonts; auto-detect Noto Sans/Serif JP.
cjk = ["pylopdf-fonts-cjk>=0.1.0"]

[build-system]
requires = ["maturin>=1.14,<2.0"]
build-backend = "maturin"

[tool.maturin]
manifest-path = "rust/Cargo.toml"
python-source = "src"
module-name = "pylopdf.pylopdf_core"
features = ["pyo3/extension-module"]

[dependency-groups]
dev = [
    "maturin>=1.14.1",
    "mypy>=1.14",
    "pre-commit>=4.6.1",
    "pytest>=8.3",
    "ruff>=0.9",
]
# Integration tests for the ecosystem recipes in the README; skipped when absent.
interop = [
    "typst>=0.15",
    "pyhanko>=0.35",
]
# Comparison libraries for reproducible benchmarks; manual only, not installed in CI.
bench = [
    "pymupdf>=1.26",
    "pypdf>=5",
    "pdfplumber>=0.11",
]
# Zensical documentation site. CI uses --only-group docs --no-install-project.
docs = [
    "zensical>=0.0.51,<0.1",
]
# Coverage-guided public-API fuzzing; Linux/macOS only.
fuzz = [
    "atheris>=2.3.0",
]

[tool.uv]
# Cache keys that make uv rebuild the extension after Rust source changes.
cache-keys = [
    { file = "pyproject.toml" },
    { file = "rust/Cargo.toml" },
    { file = "rust/build.rs" },
    { file = "rust/src/*.rs" },
]

[tool.uv.workspace]
members = ["fonts/pylopdf-fonts-cjk"]

[tool.uv.sources]
# Resolve the extra to the workspace font package during local development.
pylopdf-fonts-cjk = { workspace = true }

[tool.pytest.ini_options]
testpaths = ["tests"]

[[tool.mypy.overrides]]
# pypdf is used only by a manually run fixture generator, not as a dev dependency.
module = "pypdf.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
# Allow type checking without the cjk extra installed.
module = "pylopdf_fonts_cjk"
ignore_missing_imports = true

[[tool.mypy.overrides]]
# Allow type checking without the interop test group.
# cryptography is transitive through pyHanko and absent from the regular dev group.
module = ["typst", "pyhanko.*", "cryptography", "cryptography.*"]
ignore_missing_imports = true

[tool.ruff]
line-length = 120
src = ["src"]
target-version = "py310"
# python/ and lambda_test/ are unrelated colocated work.
extend-exclude = ["python", "lambda_test"]

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "D100",
    "D104",
    # Rules that conflict with ruff format.
    "COM812",
    "ISC001",
    "D203",
    "D213",
    # CJK fixture data intentionally contains ambiguous Unicode characters.
    "RUF001",
    "RUF002",
    "RUF003",
]

[tool.ruff.lint.per-file-ignores]
# Page and Document are cooperating classes that intentionally share internal state.
"src/pylopdf/__init__.py" = ["SLF001"]
# S106: fixed test-fixture passwords are not secrets.
# FBT003: set_form_field intentionally accepts bool checkbox values, like pymupdf.
"tests/**" = ["INP001", "S101", "D103", "PLR2004", "TC003", "S106", "FBT003"]
# Manually run generator that prints progress.
"tests/assets/encrypted/generate.py" = ["T201"]
# Integration libraries must be imported after importorskip.
"tests/test_interop.py" = ["E402"]
# Manual benchmark script: prints progress/results, tolerates competitor failures,
# and uses sequential report generation with a loop-local try block.
"bench/**" = ["INP001", "T201", "BLE001", "PLR0915", "PERF203"]
