[package]
publish = false
name = "pylopdf-core"
description = "Python bindings for the lopdf Rust library"
license = "MIT"
homepage = "https://github.com/yhay81/pylopdf"
repository = "https://github.com/yhay81/pylopdf.git"
readme = "../README.md"
version = "0.1.0"
edition = "2021"
authors = ["Yusuke Hayashi <yusuke8h@gmail.com>"]

[lib]
name = "pylopdf"
crate-type = ["cdylib"]

[dependencies]
lopdf = "0.33.0"
pyo3 = { version = "0.22.2", features = ["extension-module", "generate-import-lib"] }
