[package]
publish = false
name = "pylopdf-core"
description = "Python bindings for the lopdf Rust library"
license = "MIT"
homepage = "https://github.com/yhay81/pylopdf"
repository = "https://github.com/yhay81/pylopdf.git"
readme = "../README.md"
version = "0.4.1"
edition = "2024"
authors = ["Yusuke Hayashi <yusuke8h@gmail.com>"]

[lib]
name = "pylopdf"
crate-type = ["cdylib"]

[dependencies]
# time / jiff は外す: 最新 time クレートと lopdf 0.44 に非互換があり、日時処理は chrono で足りる
lopdf = { version = "0.44.0", default-features = false, features = ["chrono", "rayon"] }
# embed-fonts: 標準 14 フォントの代替を同梱し、フォント未解決でも文字が描画されるようにする
hayro = { version = "0.7", features = ["embed-fonts"] }
hayro-svg = "0.7"
# generate-import-lib: Python の無いコンテナ/クロス環境でも Windows 向けビルドを可能にする
pyo3 = { version = "0.29.0", features = ["abi3-py310", "generate-import-lib"] }
