[package]
publish = false
name = "pylopdf-core"
description = "Python bindings for the lopdf Rust library"
license = "MIT"
homepage = "https://github.com/yhay81/pylopdf"
repository = "https://github.com/yhay81/pylopdf.git"
readme = "../README.md"
version = "0.9.0"
edition = "2024"
authors = ["Yusuke Hayashi <yusuke8h@gmail.com>"]

[lib]
name = "pylopdf"
crate-type = ["cdylib"]

[dependencies]
# Exclude time/jiff: current time is incompatible with lopdf 0.44; chrono is sufficient.
lopdf = { version = "0.44.0", default-features = false, features = ["chrono", "rayon"] }
# Expose the already-linked rayon runtime for supported batch rendering.
rayon = "1"
# embed-fonts bundles Standard 14 substitutes so unresolved fonts still render.
hayro = { version = "0.7", features = ["embed-fonts"] }
hayro-svg = "0.7"
# generate-import-lib enables Windows builds in Python-free containers/cross environments.
pyo3 = { version = "0.29.0", features = ["abi3-py310", "generate-import-lib"] }
# Used for coordinate transforms in the hayro text-extraction Device; align versions.
kurbo = "0.13"
# Encode non-JPEG extracted images as PNG; match the version already used by hayro.
png = "0.18"
# Expand the prefix of [FlateDecode, DCTDecode] before JPEG passthrough.
# Use the zlib-rs backend. Enabling any_zlib disables miniz_oxide's rust_backend,
# so the whole tree uses zlib-rs even alongside lopdf's default features.
flate2 = { version = "1", features = ["zlib-rs"] }

[build-dependencies]
pyo3-build-config = "0.29.0"
